@@ -1,4 +1,4 @@
-// Copyright 2024 ETH Zurich
+// Copyright 2025 ETH Zurich, Anapaya Systems
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.BitSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.regex.Pattern;
 import org.antlr.v4.runtime.ANTLRErrorListener;
 import org.antlr.v4.runtime.ANTLRInputStream;
@@ -30,26 +31,28 @@ import org.antlr.v4.runtime.Token;
 import org.antlr.v4.runtime.TokenStream;
 import org.antlr.v4.runtime.atn.ATNConfigSet;
 import org.antlr.v4.runtime.dfa.DFA;
-import org.antlr.v4.runtime.tree.ParseTreeListener;
 import org.antlr.v4.runtime.tree.ParseTreeWalker;
-import org.scion.jpan.*;
-import org.scion.jpan.SequenceBaseListener;
-import org.scion.jpan.SequenceLexer;
-import org.scion.jpan.SequenceParser;
+import org.scion.jpan.Path;
+import org.scion.jpan.PathMetadata;
+import org.scion.jpan.ScionUtil;
+import org.scion.jpan.antlr.SequenceBaseListener;
+import org.scion.jpan.antlr.SequenceLexer;
+import org.scion.jpan.antlr.SequenceParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+// Copied from https://github.com/scionproto/scion/tree/master/private/path/pathpol
 public class Sequence {
 
   private static final Logger LOG = LoggerFactory.getLogger(Sequence.class.getName());
 
-  private static final String isdWildcard = "([0-9]+)";
-  private static final String asWildcard = "(([0-9]+)|([0-9a-fA-F]+:[0-9a-fA-F]+:[0-9a-fA-F]+))";
-  private static final String ifWildcard = "([0-9]+)";
+  private static final String ISD_WILDCARD = "([0-9]+)";
+  private static final String AS_WILDCARD = "(([0-9]+)|([0-9a-fA-F]+:[0-9a-fA-F]+:[0-9a-fA-F]+))";
+  private static final String IF_WILDCARD = "([0-9]+)";
 
-  private Pattern re;
-  private String srcstr;
-  private String restr;
+  private final Pattern re;
+  private final String srcstr;
+  private final String restr;
 
   private Sequence(Pattern re, String srcstr, String restr) {
     this.re = re;
@@ -57,41 +60,46 @@ public class Sequence {
     this.restr = restr;
   }
 
-  // NewSequence creates a new sequence from a string
-  public static Sequence create(String s) throws IOException {
-    // fmt.Printf("COMPILE: %s\n", s)
-    if ("".equals(s)) {
-      return new Sequence(null, null, null);
-    }
-    ANTLRInputStream istream = new ANTLRInputStream(new StringReader(s));
-    SequenceLexer lexer = new SequenceLexer(istream);
-    lexer.removeErrorListeners();
-    ErrorListener errListener = new ErrorListener();
-    lexer.addErrorListener(errListener);
-    TokenStream tstream = new CommonTokenStream(lexer, Token.DEFAULT_CHANNEL);
-    SequenceParser parser = new SequenceParser(tstream);
-    parser.removeErrorListeners();
-    parser.addErrorListener(errListener);
-    MySequenceListener listener = new MySequenceListener();
-    new ParseTreeWalker().walk((ParseTreeListener) listener, parser.start());
-    if (errListener.msg != "") {
-      throw new PPLException(
-          "Failed to parse a sequence: " + "sequence=" + s + " ;msg=" + errListener.msg);
-    }
-    String restr = String.format("^%s$", listener.stack.get(0));
-    Pattern re;
+  // creates a new sequence from a string
+  public static Sequence create(String s) {
     try {
-      re = Pattern.compile(restr);
-    } catch (Exception e) {
-      // This should never happen. Sequence parser should produce a valid regexp.
-      throw new PPLException("Error while parsing sequence regexp: " + "regexp=" + restr);
+      LOG.info("COMPILING: {}", s);
+      if (s == null || s.isEmpty()) {
+        return new Sequence(null, null, null);
+      }
+      ANTLRInputStream istream = new ANTLRInputStream(new StringReader(s));
+      SequenceLexer lexer = new SequenceLexer(istream);
+      lexer.removeErrorListeners();
+      ErrorListener errListener = new ErrorListener();
+      lexer.addErrorListener(errListener);
+      TokenStream tstream = new CommonTokenStream(lexer, Token.DEFAULT_CHANNEL);
+      SequenceParser parser = new SequenceParser(tstream);
+      parser.removeErrorListeners();
+      parser.addErrorListener(errListener);
+      MySequenceListener listener = new MySequenceListener();
+      new ParseTreeWalker().walk(listener, parser.start());
+      if (errListener.msg != null) {
+        throw new PplException(
+            "Failed to parse a sequence: " + "sequence=" + s + " ;msg=" + errListener.msg);
+      }
+      String restr = String.format("^%s$", listener.stack.get(0));
+      Pattern re;
+      try {
+        re = Pattern.compile(restr);
+      } catch (Exception e) {
+        // This should never happen. Sequence parser should produce a valid regexp.
+        throw new PplException("Error while parsing sequence regexp: " + "regexp=" + restr);
+      }
+      return new Sequence(re, s, restr);
+    } catch (IOException e) {
+      LOG.error("Error while compiling path policy from: {}", s);
+      throw new PplException(e);
     }
-    return new Sequence(re, s, restr);
   }
 
   // Eval evaluates the interface sequence list and returns the set of paths that match the list
   List<Path> eval(List<Path> paths) {
-    if (this == null || "".equals(srcstr)) {
+    if (re == null || "".equals(srcstr)) {
       return paths;
     }
     List<Path> result = new ArrayList<>();
@@ -99,7 +107,7 @@ public class Sequence {
       String desc;
       try {
         desc = getSequence(path);
-        if (!"".equals(desc)) {
+        if (!desc.isEmpty()) {
           desc = desc + " ";
         }
       } catch (Exception e) {
@@ -160,7 +168,7 @@ public class Sequence {
         int column,
         String msg,
         RecognitionException e) {
-      this.msg += String.format("%d:%d %s\n", line, column, msg);
+      this.msg += String.format("%d:%d %s%n", line, column, msg);
     }
 
     @Override
@@ -202,35 +210,40 @@ public class Sequence {
         // X is used as a substitute for the token during recovery from parsing errors.
         result = "X";
       } else {
-        result = stack.removeLast();
+        result = stack.remove(stack.size() - 1);
       }
       return result;
     }
 
+    @Override
     public void exitStart(SequenceParser.StartContext c) {
       String re = pop();
       // fmt.Printf("Start: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitQuestionMark(SequenceParser.QuestionMarkContext c) {
       String re = String.format("(%s)?", pop());
       // fmt.Printf("QuestionMark: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitPlus(SequenceParser.PlusContext c) {
       String re = String.format("(%s)+", pop());
       // fmt.Printf("Plus: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitAsterisk(SequenceParser.AsteriskContext c) {
       String re = String.format("(%s)*", pop());
       // fmt.Printf("Asterisk: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitOr(SequenceParser.OrContext c) {
       String right = pop();
       String left = pop();
@@ -239,6 +252,7 @@ public class Sequence {
       push(re);
     }
 
+    @Override
     public void exitConcatenation(SequenceParser.ConcatenationContext c) {
       String right = pop();
       String left = pop();
@@ -247,43 +261,50 @@ public class Sequence {
       push(re);
     }
 
+    @Override
     public void exitParentheses(SequenceParser.ParenthesesContext c) {
       String re = pop();
       // fmt.Printf("Parentheses: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitHop(SequenceParser.HopContext c) {
       String re = String.format("(%s +)", pop());
       // fmt.Printf("Hop: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitISDHop(SequenceParser.ISDHopContext c) {
       String isd = pop();
-      String re = String.format("(%s-%s#%s,%s)", isd, asWildcard, ifWildcard, ifWildcard);
+      String re = String.format("(%s-%s#%s,%s)", isd, AS_WILDCARD, IF_WILDCARD, IF_WILDCARD);
       // fmt.Printf("ISDHop: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitISDASHop(SequenceParser.ISDASHopContext c) {
       String as = pop();
       String isd = pop();
-      String re = String.format("(%s-%s#%s,%s)", isd, as, ifWildcard, ifWildcard);
+      String re = String.format("(%s-%s#%s,%s)", isd, as, IF_WILDCARD, IF_WILDCARD);
       // fmt.Printf("ISDASHop: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitISDASIFHop(SequenceParser.ISDASIFHopContext c) {
       String iface = pop();
       String as = pop();
       String isd = pop();
       String re =
-          String.format("(%s-%s#((%s,%s)|(%s,%s)))", isd, as, ifWildcard, iface, iface, ifWildcard);
+          String.format(
+              "(%s-%s#((%s,%s)|(%s,%s)))", isd, as, IF_WILDCARD, iface, iface, IF_WILDCARD);
       // fmt.Printf("ISDASIFHop: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitISDASIFIFHop(SequenceParser.ISDASIFIFHopContext c) {
       String ifout = pop();
       String ifin = pop();
@@ -294,42 +315,49 @@ public class Sequence {
       push(re);
     }
 
+    @Override
     public void exitWildcardISD(SequenceParser.WildcardISDContext c) {
-      String re = isdWildcard;
+      String re = ISD_WILDCARD;
       // fmt.Printf("WildcardISD: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitISD(SequenceParser.ISDContext c) {
       String re = c.getText();
       // fmt.Printf("ISD: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitWildcardAS(SequenceParser.WildcardASContext c) {
-      String re = asWildcard;
+      String re = AS_WILDCARD;
       // fmt.Printf("WildcardAS: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitLegacyAS(SequenceParser.LegacyASContext c) {
       String re = c.getText().substring(1);
       // fmt.Printf("LegacyAS: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitAS(SequenceParser.ASContext c) {
       String re = c.getText().substring(1);
       // fmt.Printf("AS: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitWildcardIFace(SequenceParser.WildcardIFaceContext c) {
-      String re = ifWildcard;
+      String re = IF_WILDCARD;
       // fmt.Printf("WildcardIFace: %s RE: %s\n", c.GetText(), re)
       push(re);
     }
 
+    @Override
     public void exitIFace(SequenceParser.IFaceContext c) {
       String re = c.getText();
       // fmt.Printf("IFace: %s RE: %s\n", c.GetText(), re)
@@ -351,7 +379,7 @@ public class Sequence {
       // Path should contain even number of interfaces. 1 for source AS,
       // 1 for destination AS and 2 per each intermediate AS. Invalid paths should
       // not occur but if they do let's ignore them.
-      throw new PPLException("Invalid path with odd number of hops: " + "path=" + path);
+      throw new PplException("Invalid path with odd number of hops: " + "path=" + path);
     }
 
     if (ifaces.isEmpty()) {
@@ -364,7 +392,6 @@ public class Sequence {
     // e.g. 64-ff00:0:112#3,5. For the source AS, the inbound interface will be
     // zero. For destination AS, outbound interface will be zero.
     StringBuilder hops = new StringBuilder();
-    // hops := make([]string, 0, len(ifaces)/2+1);
     hops.append(hop(ifaces.get(0).getIsdAs(), 0, ifaces.get(0).getId()));
     hops.append(" ");
     for (int i = 1; i < ifaces.size() - 1; i += 2) {
@@ -374,5 +401,35 @@ public class Sequence {
     hops.append(
         hop(ifaces.get(ifaces.size() - 1).getIsdAs(), ifaces.get(ifaces.size() - 1).getId(), 0));
     return hops.toString();
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Sequence sequence = (Sequence) o;
+    return Objects.equals(re.toString(), sequence.re.toString())
+        && Objects.equals(srcstr, sequence.srcstr)
+        && Objects.equals(restr, sequence.restr);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(re, srcstr, restr);
+  }
+
+  @Override
+  public String toString() {
+    return "Sequence{"
+        + "re="
+        + re
+        + ", srcstr='"
+        + srcstr
+        + '\''
+        + ", restr='"
+        + restr
+        + '\''
+        + '}';
   }
 }
